<resources>
    <string name="app_name" translatable="false">Homepwner</string>
    <string name="item_name_hint">Enter a name for the item.</string>
    <string name="item_name_label">Name</string>
    <string name="item_serial_hint">Enter a serial number for the item.</string>
    <string name="item_serial_label">Serial</string>
    <string name="item_value_hint">Enter the value of the item.</string>
    <string name="item_value_label">Value</string>
    <string name="date_picker_title">Date of item:</string>
    <string name="new_item">New Item</string>
    <string name="item_report_text">Send Report</string>
    <string name="item_report" translatable="false">%1$s!
        The item was added on %2$s. %3$s, and %4$s
</string>
    <string name="item_report_subject">Homepwner Item Report</string>
    <string name="send_report">Send item report via</string>
</resources>