<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/item_name_label" />

        <EditText
            android:id="@+id/item_name"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/item_name_hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/item_serial_label" />

        <EditText
            android:id="@+id/item_serial"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/item_serial_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/item_value_label" />

        <EditText
            android:id="@+id/item_value"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/item_value_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <Button
            android:id="@+id/item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/item_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_report_text" />

        <ImageView
            android:id="@+id/item_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:scaleType="centerInside" />

        <ImageButton
            android:id="@+id/item_camera"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:src="@android:drawable/ic_menu_camera" />

    </LinearLayout>

</LinearLayout>